# big_data_cloud_group_2

./: .gitignore  README.md  docker-compose.yaml  docker-compose.yml  dockerfile.bulk  dockerfile.dashboard  dockerfile.dwh  requirements-mac.txt  requirements.txt
dashboard/: dockerfile  pyproject.toml
dashboard/backend/: data_processing.py
dashboard/frontend/: map.py
dashboard/run_dashboard/pages/: Data_och_IT.py
dbt_job_ads/: dbt_project.yml
dbt_job_ads/models/: schema.yml
dbt_job_ads/models/fct/: fct_job_ads.sql
dbt_job_ads/models/src/: src.yml
dlt_code/: dlt_bulk_all_ads.py  dlt_daily_update.py
iac/: .terraform.lock.hcl  archived_pipeline.tf  container_registry.tf  dbt_profiles.yml  pipeline.tf  providers.tf  resource_group.tf  storage.tf  variable.tf  web_server.tf
orchestration/: definitions.py
